fix(openapi)!: add health endpoint to openapi
Rearrange the application.yml in test to look more like source.

BREAKING CHANGE: Move the health endpoint from `/resource/health` to
`/resource/api/health` for OpenAPI documentations to be easy to use.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>